--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p align="center">
 高中畢業於<a href="http://www.fhhs.kh.edu.tw/">復華中學電子商務科。</a> <br>
 目前就讀<a href="http://www.csie.csu.edu.tw/wSite/mp?mp=464103/">正修科技大學二年級資訊工程系</a><br>
-平常興趣打籃球有空時出外走走，玩手遊等等。<br>
+平常興趣打籃球有空時出外走走等等。<br>
 也就是因為平常興趣與家人行也所以高中畢業時<br>
 選擇了資訊工程系就讀。
 
